@@ -64,9 +64,19 @@ winperf_msx_queues = {
    "Poison Queue Length"     :  "44",
 }
 
+winperf_msx_queues_inventory = []
+
 def inventory_winperf_msx_queues(info):
     num_instances = int(info[1][0])
     if num_instances > 0:
+        # Its possible to set the wanted queues via wato
+        inventory_rules = {}
+        for rulset in host_extra_conf(g_hostname, winperf_msx_queues_inventory):
+            inventory_rules.update(dict(rulset))
+        # In case that rules for this host are set,
+        # only use this rules
+        if inventory_rules:
+            winperf_msx_queues = inventory_rules
         return [ (name, "msx_queues_default_levels") for name in winperf_msx_queues ]
 
 def check_winperf_msx_queues(item, params, info):
