@@ -40,6 +40,7 @@
     * 1103 windows agent: now able to omit context text of logfiles...
     * 1150 netstat: new check for monitoring TCP/UDP connections and Linux and AIX...
     * 0654 oracle_instance: now also monitors the log mode
+    * 1176 winperf_msx_queues: The list of counters for inventory can now be configured host based using wato
     * 1051 FIX: tcp_conn_stats: fix missing performance data...
     * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
     * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
